Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-73962

Qt Remote Objects enableRemoting crash

    XMLWordPrintable

Details

    • Linux/X11
    • 71d55bc57949daa469b12457af73109eb5cfd6b9 (qt/qtremoteobjects/5.12)

    Description

      This simple code snippet results in a crash: 

          QRemoteObjectHost srcNode;
          srcNode.setHostUrl(QUrl("local:service"), QRemoteObjectHost::AllowExternalRegistration);
          QQuickItem item;
          srcNode.enableRemoting(&item, "item");
      

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            bstottle Brett Stottlemyer
            vmatikainen Vikke Matikainen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes