Fix crash with AllowExternalRegistration and QtRO schema

Using AllowExternalRegistration with a QtRO schema (local, tcp, qnx) does
not support overriding the url, so should not be supported.

Change-Id: I36108a26fcb992bfeb07632eb88c2156e38ccadc
Fixes: QTBUG-73962
Reviewed-by: Michael Brasser <michael.brasser@live.com>